# walter-ui

./: .gitignore  Makefile  README.md  setup.sh
wal-pinner/: package-lock.json  package.json  tsconfig.json
wal-pinner/src/: blobProcessor.ts  config.ts  index.ts  server.ts  watcher.ts
wall-pinner/: Cargo.toml
wall-pinner/src/: main.rs
walter-core/: Cargo.toml
walter-core/src/: lib.rs
walter-core/src/client/: mod.rs
walter-core/src/config/: mod.rs
walter-core/src/encryptor/: mod.rs
walter-core/src/epoch_extender/: mod.rs  types.rs
walter-core/src/migrator/: mod.rs
walter-core/src/sharder/: mod.rs
walter-core/src/types/: mod.rs
walter-core/src/updater/: mod.rs
walter-core/src/utils/: mod.rs
walter-core/test_files/: lmao  lmao.txt  test_upload.txt  uploadcopy.test
walter-core/tests/: test_config.json  test_config_updated.json  test_save_config.json
walter-db/: Cargo.toml
walter-db/src/: lib.rs
walter-db/src/walrus_io/: mod.rs  types.rs
walter-ui/: Cargo.toml  test.txt
walter-ui/src/: app.rs  main.rs  ui.rs  utils.rs
walter-ui/src/screens/: home.rs  mod.rs  storage.rs
walter-updater/: .gitignore  Cargo.toml
walter-updater/src/: commands.rs  lib.rs  main.rs  permissions.rs  utils.rs
